[package]
name = "public-peer"
version = "0.1.0"
edition = "2021"

[dependencies]
# webrtc = "0.4"
# ring = "0.17.0-alpha.11"
tokio = { version = "1", features = ["full", "tracing"] }
eyre = "0.6"
# I'm using a clone of webrtc-ice so that I can step through the code and debug.  It should work with the public version too though.
webrtc-ice = { path = "../../webrtc/crates/ice" }
simple_logger = "2.1.0"
stun = "0.4.2"
webrtc-util = "0.5.3"
async-trait = "0.1.53"